mock/crates/arvo/tests/ui/warm_bound_negative.stderr
error[E0277]: strategy `Warm` does not provide a container for 33-bit width
 --> tests/ui/warm_bound_negative.rs:9:12
  |
9 |     let _: UFixed<{ IBits(17) }, { FBits(16) }, Warm> = UFixed::from_raw(0);
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `UContainerFor<33>` is not implemented for `Warm`
  |
  = note: Warm caps at I+F<=32; for wider widths, choose Hot or Precise explicitly: `Uint64<Hot>`, `Uint64<Precise>`, etc.
  = help: `Warm` implements trait `UContainerFor<N>`:
            UContainerFor<10>
            UContainerFor<11>
            UContainerFor<12>
            UContainerFor<13>
            UContainerFor<14>
            UContainerFor<15>
            UContainerFor<16>
            UContainerFor<17>
            UContainerFor<18>
            UContainerFor<19>
            UContainerFor<1>
            UContainerFor<20>
            UContainerFor<21>
            UContainerFor<22>
            UContainerFor<23>
            UContainerFor<24>
            UContainerFor<25>
            UContainerFor<26>
            UContainerFor<27>
            UContainerFor<28>
            UContainerFor<29>
            UContainerFor<2>
            UContainerFor<30>
            UContainerFor<31>
            UContainerFor<32>
            UContainerFor<3>
            UContainerFor<4>
            UContainerFor<5>
            UContainerFor<6>
            UContainerFor<7>
            UContainerFor<8>
            UContainerFor<9>
note: required by a bound in `UFixed`
 --> src/ufixed.rs
  |
  | pub struct UFixed<const I: IBits, const F: FBits, S: Strategy = crate::strategy::Warm>(
  |            ------ required by a bound in this struct
...
  |     S: UContainerFor<{ ufixed_bits(I, F) }>;
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `UFixed`

error[E0277]: strategy `Warm` does not provide a container for 33-bit width
 --> tests/ui/warm_bound_negative.rs:9:57
  |
9 |     let _: UFixed<{ IBits(17) }, { FBits(16) }, Warm> = UFixed::from_raw(0);
  |                                                         ^^^^^^ the trait `UContainerFor<33>` is not implemented for `Warm`
  |
  = note: Warm caps at I+F<=32; for wider widths, choose Hot or Precise explicitly: `Uint64<Hot>`, `Uint64<Precise>`, etc.
  = help: `Warm` implements trait `UContainerFor<N>`:
            UContainerFor<10>
            UContainerFor<11>
            UContainerFor<12>
            UContainerFor<13>
            UContainerFor<14>
            UContainerFor<15>
            UContainerFor<16>
            UContainerFor<17>
            UContainerFor<18>
            UContainerFor<19>
            UContainerFor<1>
            UContainerFor<20>
            UContainerFor<21>
            UContainerFor<22>
            UContainerFor<23>
            UContainerFor<24>
            UContainerFor<25>
            UContainerFor<26>
            UContainerFor<27>
            UContainerFor<28>
            UContainerFor<29>
            UContainerFor<2>
            UContainerFor<30>
            UContainerFor<31>
            UContainerFor<32>
            UContainerFor<3>
            UContainerFor<4>
            UContainerFor<5>
            UContainerFor<6>
            UContainerFor<7>
            UContainerFor<8>
            UContainerFor<9>
note: required by a bound in `UFixed`
 --> src/ufixed.rs
  |
  | pub struct UFixed<const I: IBits, const F: FBits, S: Strategy = crate::strategy::Warm>(
  |            ------ required by a bound in this struct
...
  |     S: UContainerFor<{ ufixed_bits(I, F) }>;
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `UFixed`

error[E0277]: strategy `Warm` does not provide a container for 33-bit width
 --> tests/ui/warm_bound_negative.rs:9:74
  |
9 |     let _: UFixed<{ IBits(17) }, { FBits(16) }, Warm> = UFixed::from_raw(0);
  |                                                                          ^ the trait `UContainerFor<33>` is not implemented for `Warm`
  |
  = note: Warm caps at I+F<=32; for wider widths, choose Hot or Precise explicitly: `Uint64<Hot>`, `Uint64<Precise>`, etc.
  = help: `Warm` implements trait `UContainerFor<N>`:
            UContainerFor<10>
            UContainerFor<11>
            UContainerFor<12>
            UContainerFor<13>
            UContainerFor<14>
            UContainerFor<15>
            UContainerFor<16>
            UContainerFor<17>
            UContainerFor<18>
            UContainerFor<19>
            UContainerFor<1>
            UContainerFor<20>
            UContainerFor<21>
            UContainerFor<22>
            UContainerFor<23>
            UContainerFor<24>
            UContainerFor<25>
            UContainerFor<26>
            UContainerFor<27>
            UContainerFor<28>
            UContainerFor<29>
            UContainerFor<2>
            UContainerFor<30>
            UContainerFor<31>
            UContainerFor<32>
            UContainerFor<3>
            UContainerFor<4>
            UContainerFor<5>
            UContainerFor<6>
            UContainerFor<7>
            UContainerFor<8>
            UContainerFor<9>
